--- a/Index.html
+++ b/Index.html
@@ -59,7 +59,7 @@
     <!-- About Section -->
     <section id="about">
         <h2>About</h2>
-        <p>This project is a visualization of hierarchical data using D3.js. The tree graph shows the relationships between Indian states, districts, mandals, and villages.</p>
+        <p>This project is a visualization of hierarchical data using D3.js. The hierarchical tree graph shows the relationships between Indian states, districts, mandals, and villages.</p>
     </section>
 
     <script src="treeData.js"></script> <!-- External Data -->
